# GherkinPay

./: .gitignore  Anchor.toml  DESIGN.md  README.md  TESTING.md  package-lock.json
.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  STATE.md  doctor-history.jsonl  gsd.db-shm  gsd.db-wal  preferences.md
.gsd/journal/: 2026-03-23.jsonl  2026-03-25.jsonl  2026-03-26.jsonl
.gsd/milestones/M001/: M001-CONTEXT.md  M001-ROADMAP.md  M001-SUMMARY.md
.gsd/milestones/M002/: M002-CONTEXT.md  M002-RESEARCH.md  M002-ROADMAP.md  M002-SUMMARY.md
.gsd/milestones/M003/: M003-CONTEXT.md  M003-RESEARCH.md  M003-ROADMAP.md  M003-SUMMARY.md  M003-VALIDATION.md
.gsd/milestones/M004/: M004-CONTEXT.md  M004-ROADMAP.md  M004-SUMMARY.md  M004-VALIDATION.md
.gsd/milestones/M005/: M005-CONTEXT.md  M005-ROADMAP.md  M005-SUMMARY.md  M005-VALIDATION.md
.gsd/milestones/M006/: M006-CONTEXT.md  M006-ROADMAP.md  M006-SUMMARY.md  M006-VALIDATION.md
.gsd/milestones/M007/: M007-CONTEXT.md  M007-RESEARCH.md  M007-ROADMAP.md  M007-SUMMARY.md
.gsd/reports/: M006-2026-03-25T12-05-54.html  index.html  reports.json
app/web/: .env.production  components.json  eslint.config.js  jito-ts-stub.js  next.config.js  package.json  playwright.config.ts
app/web/e2e/: 02-payment-lifecycle.spec.ts  (+5 more)
fixtures/: mock-pyth-feed.json
programs/gherkin-pay/: Cargo.toml
programs/gherkin-pay-hook/: Cargo.toml  keypair.json
programs/gherkin-pay-hook/src/: lib.rs
scripts/: README.md  crank-bot.ts  create-mock-pyth-feed.mjs  generate-test-keypair.mjs  verify-s03-smoke.sh
tests/: gherkin-pay.ts
(+324 files in other folders)
