[package]
name = "gherkin-pay-hook"
version = "0.1.0"
description = "GherkinPay Transfer Hook — Compliance enforcement via Token-2022"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gherkin_pay_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
spl-transfer-hook-interface = "0.8"
spl-tlv-account-resolution = "0.8"
